Fixed  broken links in Installation Guide
Links

Fix broken links in Installation Guide

https://issues.redhat.com/browse/AAP-32433

--- a/downstream/modules/platform/proc-completing-post-installation-tasks.adoc
+++ b/downstream/modules/platform/proc-completing-post-installation-tasks.adoc
@@ -6,7 +6,7 @@
 
 After you have completed the installation of {PlatformNameShort}, ensure that {HubName} and {ControllerName} deploy properly.
 
-Before your first login, you must add your subscription information to the platform. To obtain your subscription information in uploadable form, see link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/red_hat_ansible_automation_platform_operations_guide/assembly-aap-obtain-manifest-files#assembly-aap-obtain-manifest-files[Obtaining a manifest file] in the Access management and authentication guide.
+Before your first login, you must add your subscription information to the platform. To obtain your subscription information in uploadable form, see link:{URLCentralAuth}/assembly-aap-obtain-manifest-files#assembly-aap-obtain-manifest-files[Obtaining a manifest file] in _{TitleCentralAuth}_.
 
 Once you have obtained your subscription manifest, see link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/getting_started/with/Ansible_automation_platform[{TitleGettingStarted}] for instructions on how to upload your subscription information.
 
@@ -14,6 +14,6 @@ Now that you have successfully installed Ansible Automation Platform, to begin u
 
 link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/getting_started/with/Ansible_automation_platform[{TitleGettingStarted}]
 
-link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/managing_content_in_automation_hub/index[Managing content in automation hub]
+link:{LinkHubManagingContent}.
 
-link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/creating_and_consuming_execution_environments/index[Creating and consuming execution environments]
+link:{LinkBuilder}.
