--- a/downstream/modules/platform/ref-system-requirements.adoc
+++ b/downstream/modules/platform/ref-system-requirements.adoc
@@ -17,7 +17,7 @@ See, link:{LinkTopologies} for more information on topology options.
 
 h| Subscription | Valid {PlatformName} |
 
-h| OS | {RHEL} 9.2 or later x86_64 aarch64 |{PlatformName} is also supported on OpenShift, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/deploying_the_red_hat_ansible_automation_platform_operator_on_openshift_container_platform/index[Deploying the {PlatformName} operator on {OCPShort}] for more information.
+h| OS | {RHEL} 9.2 or later x86_64 aarch64 |{PlatformName} is also supported on OpenShift, see link:{LinkOperatorInstallation} for more information.
 
 h| Ansible-core | Ansible-core version {CoreInstVers} or later | {PlatformNameShort} uses the system-wide ansible-core package to install the platform, but uses ansible-core {CoreUseVers} for both its control plane and built-in execution environments.
 
@@ -47,7 +47,7 @@ These are minimum requirements and can be increased for larger workloads in incr
 
 The following are necessary for you to work with project updates and collections:
 
-* Ensure that the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_planning_guide/ref-network-ports-protocols_planning[network ports and protocols] listed in _Table 5.3. Automation Hub_ are available for successful connection and download of collections from {HubName} or {Galaxy} server.
+* Ensure that the link:{URLPlanningGuide}/ref-network-ports-protocols_planning#ref-network-ports-protocols_planning[Network ports and protocols] listed in _Table 6.3. Automation Hub_ are available for successful connection and download of collections from {HubName} or {Galaxy} server.
 
 .Additional notes for {PlatformName} requirements
 
