--- a/downstream/modules/platform/ref-automation-hub-requirements.adoc
+++ b/downstream/modules/platform/ref-automation-hub-requirements.adoc
@@ -16,5 +16,5 @@ To avoid this, use the `automationhub_main_url` inventory variable with a value 
 This adds the external address to `/etc/pulp/settings.py`.
 This implies that you only want to use the external address.
 
-For information about inventory file variables, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_installation_guide/appendix-inventory-files-vars[Inventory file variables] in the _{PlatformName} Installation Guide_.
+For information about inventory file variables, see xref:appendix-inventory-files-vars[Inventory file variables].
 ====
