--- a/downstream/modules/platform/ref-eda-system-requirements.adoc
+++ b/downstream/modules/platform/ref-eda-system-requirements.adoc
@@ -28,6 +28,6 @@ For specific instructions, see the Knowledge-Centered Support (KCS) article, lin
 However, the actual memory consumption can vary significantly based on the complexity of your rules and the volume and size of the events processed. 
 In scenarios where a large number of events are anticipated or the rulebook complexity is high, conduct a preliminary assessment of resource usage in a staging environment. 
 This ensures that your maximum number of activations is based on the capacity of your resources. 
-See link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/red_hat_ansible_automation_platform_installation_guide/index#ref-single-controller-hub-eda-with-managed-db[Single {ControllerName}, single {HubName}, and single {EDAcontroller} node with external (installer managed) database] for an example on setting {EDAController} maximum
-running activations. 
+
+For an example of setting {EDAController} maximumrunning activations, see xref:ref-gateway-controller-hub-eda-ext-db[Single {ControllerName}, single {HubName}, and single {EDAcontroller} node with external (installer managed) database]. 
 ====
