Fixed broken links in Installation Guide
More links

Fix broken links in Installation Guide

https://issues.redhat.com/browse/AAP-32433

--- a/downstream/modules/platform/ref-gateway-variables.adoc
+++ b/downstream/modules/platform/ref-gateway-variables.adoc
@@ -49,7 +49,7 @@ Default = `5`
 
 | `automationgateway_main_url` | `gateway_main_url` | _Optional_
 
-The main platform gateway URL that clients will connect to (e.g. `https://<gateway_node>`).
+The main platform gateway URL that clients will connect to (e.g. `\https://<gateway_node>`).
 
 If not specified, the first the first node in the `[automationgateway]` group will be used when needed.
 
