Fix broken links in Installation Guide
More links

Fix broken links in Installation Guide

https://issues.redhat.com/browse/AAP-32433

--- a/downstream/modules/platform/ref-controller-system-requirements.adoc
+++ b/downstream/modules/platform/ref-controller-system-requirements.adoc
@@ -50,5 +50,5 @@ If `forks` is set to 400, 42 GB of memory is recommended.
 [role="_additional-resources"]
 .Additional resources
 
-* For more information about obtaining an {ControllerName} subscription, see link:{URLControllerUserGuide}/controller-managing-subscriptions#controller-importing-subscriptions[Importing a subscription].
+* For more information about obtaining an {ControllerName} subscription, see link:{URLCentralAuth}/assembly-gateway-licensing#proc-attaching-subscriptions[Attaching your {PlatformName} subscription].
 * For questions, contact Ansible support through the link:https://access.redhat.com/[Red Hat Customer Portal].
