--- a/downstream/assemblies/platform/assembly-platform-install-scenario.adoc
+++ b/downstream/assemblies/platform/assembly-platform-install-scenario.adoc
@@ -12,7 +12,7 @@ ifdef::context[:parent-context: {context}]
 [role="_abstract"]
 {PlatformNameShort} is a modular platform. The platform gateway deploys automation platform components, such as {ControllerName}, {HubName}, and {EDAcontroller}. 
 
-For more information about the components provided with {PlatformNameShort}, see link:{URLPlanningGuide}/ref-platform-components[{PlatformName} components] in {TitlePlanningGuide}. 
+For more information about the components provided with {PlatformNameShort}, see link:{URLPlanningGuide}/ref-aap-components[{PlatformName} components] in {TitlePlanningGuide}. 
 
 There are several supported installation scenarios for {PlatformName}. To install {PlatformName}, you must edit the inventory file parameters to specify your installation scenario. You can use the link:{URLTopologies}/rpm-topologies#example_enterprise_inventory_file[enterprise installer] as a basis for your own inventory file.
 
