Fixed broken links in Installation Guide
Corrections

Fix broken links in Installation Guide

https://issues.redhat.com/browse/AAP-32433

--- a/downstream/modules/platform/con-aap-installation-prereqs.adoc
+++ b/downstream/modules/platform/con-aap-installation-prereqs.adoc
@@ -4,7 +4,7 @@
 
 [role="_abstract"]
 
-* You chose and obtained a platform installer from the link:{PlatformDownloadUrl}[Red Hat Ansible Automation Platform Product Software].
+* You chose and obtained a platform installer from the link:{PlatformDownloadUrl}[{PlatformName} Product Software].
 * You are installing on a machine that meets base system requirements.
 * You have updated all of the packages to the recent version of your RHEL nodes.
 
@@ -15,4 +15,4 @@ WARNING: To prevent errors, upgrade your RHEL nodes fully before installing {Pla
 
 [role="_additional-resources"]
 .Additional resources
-For more information about obtaining a platform installer or system requirements, see the link:{URLPlanningGuide}/platform-system-requirements[{System requirements] in the _{TitlePlanningGuide}_.
+For more information about obtaining a platform installer or system requirements, see the link:{URLPlanningGuide}/platform-system-requirements[System requirements] in the _{TitlePlanningGuide}_.
