--- a/downstream/modules/platform/ref-controller-system-requirements.adoc
+++ b/downstream/modules/platform/ref-controller-system-requirements.adoc
@@ -18,7 +18,7 @@ Execution nodes run automation. Increase memory and CPU to increase capacity for
 * Recommended RAM and CPU node sizes are not supplied.
 The required RAM or CPU depends directly on the number of jobs you are running in that environment.
 
-* For capacity based on forks in your configuration, see link:{URLControllerUserGuide}/controller-jobs#controller-capacity-determination[{ControllerNameStart} capacity determination and job impact]. .
+* For capacity based on forks in your configuration, see link:{URLControllerUserGuide}/controller-jobs#controller-capacity-determination[{ControllerNameStart} capacity determination and job impact].
 
 For further information about required RAM and CPU levels, see link:{URLControllerAdminGuide}/assembly-controller-improving-performance[Performance tuning for automation controller].
 ====
