Fixed  broken links in Installation Guide (#2259)
* Fixed  broken links in Installation Guide

Links

Fix broken links in Installation Guide

https://issues.redhat.com/browse/AAP-32433

* Fixed broken links in Installation Guide

More links

Fix broken links in Installation Guide

https://issues.redhat.com/browse/AAP-32433

* Fix broken links in Installation Guide

More links

Fix broken links in Installation Guide

https://issues.redhat.com/browse/AAP-32433

* Fixed broken links in Installation Guide

Corrections

Fix broken links in Installation Guide

https://issues.redhat.com/browse/AAP-32433

--- a/downstream/assemblies/platform/assembly-platform-install-scenario.adoc
+++ b/downstream/assemblies/platform/assembly-platform-install-scenario.adoc
@@ -12,7 +12,7 @@ ifdef::context[:parent-context: {context}]
 [role="_abstract"]
 {PlatformNameShort} is a modular platform. The platform gateway deploys automation platform components, such as {ControllerName}, {HubName}, and {EDAcontroller}. 
 
-For more information about the components provided with {PlatformNameShort}, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_planning_guide/planning-installation#ref-platform-components[{PlatformName} components] in link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/planning_your_installation[{TitlePlanningGuide}]. 
+For more information about the components provided with {PlatformNameShort}, see link:{URLPlanningGuide}/ref-aap-components[{PlatformName} components] in {TitlePlanningGuide}. 
 
 There are several supported installation scenarios for {PlatformName}. To install {PlatformName}, you must edit the inventory file parameters to specify your installation scenario. You can use the link:{URLTopologies}/rpm-topologies#example_enterprise_inventory_file[enterprise installer] as a basis for your own inventory file.
 
@@ -22,7 +22,7 @@ There are several supported installation scenarios for {PlatformName}. To instal
 //* xref:ref-gateway-controller-hub-eda-ext-db[Single platform gateway, {ControllerName}, {HubName}, and {EDAcontroller} node with an external (installer managed) database]
 
 .Additional resources
-For a comprehensive list of pre-defined variables used in Ansible installation inventory files, see link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html-single/red_hat_ansible_automation_platform_installation_guide/index#ref-ansible-inventory-variables[Ansible variables].
+For a comprehensive list of pre-defined variables used in Ansible installation inventory files, see xref:ref-ansible-inventory-variables[Ansible variables].
 
 // Removed for install scenario consolidation AAP-17771
 // * xref:ref-single-controller-ext-installer-managed-db[Single {ControllerName} with external (installer managed) database]
