Update inventory file code blocks to allow copy paste
Update the AsciiDoc syntax for the code blocks for inventory file examples to ensure the copy and paste command on docs.redhat.com works correctly.

Corrected for containerized install guide and topologies documentation.

Containerized AAP install guide and installer need to be reconciled

https://issues.redhat.com/browse/AAP-32473

--- a/downstream/modules/platform/proc-installing-containerized-aap.adoc
+++ b/downstream/modules/platform/proc-installing-containerized-aap.adoc
@@ -18,7 +18,7 @@ To use the example inventory files, replace the `< >` placeholders with your spe
 
 Use the following example inventory file to perform an online installation for the containerized growth topology:
 
-[source,subs="+attributes"]
+[source,yaml,subs="+attributes"]
 ----
 # This is the {PlatformNameShort} growth installer inventory file
 # Please consult the documentation if you are unsure what to add
@@ -96,7 +96,7 @@ eda_pg_password=<set your own>
 
 Use the following example inventory file to perform an online installation for the containerized enterprise topology:
 
-[source, subs="+attributes"]
+[source,yaml,subs="+attributes"]
 ----
 # This is the {PlatformNameShort} installer inventory file
 # Please consult the documentation if you are unsure what to add
