--- a/downstream/modules/topologies/ref-cont-a-env-a.adoc
+++ b/downstream/modules/topologies/ref-cont-a-env-a.adoc
@@ -67,7 +67,7 @@ a|
 == Example growth inventory file
 Use the following example inventory file to perform an installation for this topology: 
 
-[subs="+attributes"]
+[source,yaml,subs="+attributes"]
 ----
 # This is the growth installer inventory file
 # Please consult the docs if you are unsure what to add
