--- a/downstream/modules/topologies/ref-rpm-b-env-b.adoc
+++ b/downstream/modules/topologies/ref-rpm-b-env-b.adoc
@@ -71,7 +71,7 @@ Red Hat has tested the following configurations to install and run {PlatformName
 == Example enterprise inventory file
 Use the following example inventory file to perform an installation for this topology: 
 
-[subs="+attributes"]
+[source,yaml,subs="+attributes"]
 ----
 # This is the enterprise installer inventory file
 # Please consult the docs if you are unsure what to add
