--- a/downstream/modules/platform/ref-OCP-system-requirements.adoc
+++ b/downstream/modules/platform/ref-OCP-system-requirements.adoc
@@ -4,4 +4,4 @@
 
 = System requirements for installing on {OCPShort}
 
-For system requirements for installing {PlatformNameShort} on {OCPShort}, see the link:{URLTopologies}[Tested system configurations] section of _{TitleTopologies}_.
+For system requirements for installing {PlatformNameShort} on {OCPShort}, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/tested_deployment_models/ocp-topologies#tested_system_configurations_6[Tested system configurations] section of _{TitleTopologies}_. 
