--- a/stories/topics/con-saas-backup-and-diaster-recovery.adoc
+++ b/stories/topics/con-saas-backup-and-diaster-recovery.adoc
@@ -26,7 +26,7 @@ Customer data is replicated to a predefined secondary region based on the deploy
 |===
 
 To recover an {PlatformNameShort} deployment in a different AWS region, a customer must submit a request specifying their preferred deployment region from the available options.
-Red{nbsp}Hat valuates the request and begins building an instance in that region.
+Red{nbsp}Hat evaluates the request and begins building an instance in that region.
 Data from the previous instance is recovered from the customer’s business continuity region.
 The customer is responsible for any necessary post-deployment network configuration to integrate the new instance into their environment.
 
