--- a/stories/topics/con-saas-provisioning.adoc
+++ b/stories/topics/con-saas-provisioning.adoc
@@ -3,7 +3,7 @@
 = Provisioning
 
 Provisioning your environment can take up to two hours.
-When it's ready, you will receive a confirmation email at the address linked to your account. 
+When it is ready, you will receive a confirmation email at the address linked to your account. 
 
 [IMPORTANT]
 ====
