--- a/stories/topics/con-saas-control-plane.adoc
+++ b/stories/topics/con-saas-control-plane.adoc
@@ -1,7 +1,8 @@
 [id="con-saas-control-plane"]
 = Control plane
 
-The {PlatformNameShort} control plane includes the application UIs, APIs, components, and services used for managing automation.Red{nbsp}Hat manages these within its own infrastructure.
+The {PlatformNameShort} control plane includes the application UIs, APIs, components, and services used for managing automation. 
+Red{nbsp}Hat manages these within its own infrastructure.
 
 include::con-saas-customer-access.adoc[leveloffset=+1]
 include::con-saas-sre-access-and-management.adoc[leveloffset=+1]
