--- a/stories/topics/con-saas-sre-access-and-management.adoc
+++ b/stories/topics/con-saas-sre-access-and-management.adoc
@@ -11,4 +11,4 @@ SREs access resources and audit data are collected when:
 
 * The SRE team requests access to cluster resources using a tool that allows temporary access. This tool generates a log entry detailing the time and the SRE team member who requested access.
 
-* Audit logs are created for any management operation performed on a customer instance and are sent to a centralized logging system
+* Audit logs are created for any management operation performed on a customer instance and are sent to a centralized logging system.
