--- a/lightspeed/modules/con_training-data.adoc
+++ b/lightspeed/modules/con_training-data.adoc
@@ -18,12 +18,12 @@ If you publish content to {Galaxy} and want to restrict your {Galaxy} content fr
 
 {LightspeedshortName} collects the following telemetry data by default:
 
-* *Operational telemetry data*
-+
-This is the data that is required to operate and troubleshoot the Ansible Lightspeed service. For more information, refer the Enterprise Agreement. You cannot disable the collection of operational telemetry data. 
+* Operational telemetry data
+* Admin dashboard telemetry data
 
-* *Admin dashboard telemetry data*
-+
-This is the data that provides insight into how your organization users are using the Ansible Lightspeed service, and the metrics are displayed on the Admin dashboard. You can also disable the Admin dashboard telemetry if you no longer want to collect and monitor the telemetry data. For more information about Admin dashboard telemetry, see xref:managing-admin-dashboard-telemetry_lightspeed-user-guide[Viewing and managing Admin dashboard telemetry].
+[NOTE]
+====
+No telemetry data is collected in an {LightspeedShortName} on-premise deployment.
+====
 
 include::con_telemetry-data-collection-notice.adoc[leveloffset=+1]
