--- a/lightspeed/assemblies/assembly_managing-admin-dashboard-telemetry.adoc
+++ b/lightspeed/assemblies/assembly_managing-admin-dashboard-telemetry.adoc
@@ -15,10 +15,22 @@ ifdef::context[:parent-context: {context}]
 * *Operational telemetry data*
 +
 This is the data that is required to operate and troubleshoot the Ansible Lightspeed service. For more information, refer the Enterprise Agreement. You cannot disable the collection of operational telemetry data. 
++
+This includes the following data:
+
+** Organization you are logged into (Organization ID, account number)
+** Large language model (or models) that you are connected to 
 
 * *Admin dashboard telemetry data*
 +
-This is the data that provides insight into how your organization users are using the Ansible Lightspeed service, and the metrics are displayed on the Admin dashboard. You can also disable the Admin dashboard telemetry if you no longer want to collect and monitor the telemetry data.  
+This is the data that provides insight into how your organization users are using the Ansible Lightspeed service, and the metrics are displayed on the Admin dashboard. 
++
+This includes the following data:
+
+** Prompts and content suggestions, including accept or reject of the content suggestions
+** User sentiment feedback
++
+You can also disable the Admin dashboard telemetry if you no longer want to collect and monitor the telemetry data. 
 
 [NOTE]
 ====
