--- a/downstream/titles/updating-aap/master.adoc
+++ b/downstream/titles/updating-aap/master.adoc
@@ -18,7 +18,7 @@ Upgrades from 2.4 to 2.5 are unsupported at this time. For more information, see
 
 // Assemblies go here, one for each install type (RPM, Container, Operator) 
 // Example:
-// include::platform/<assembly_file_name>.adoc[leveloffset+=1]
+// include::platform/<assembly_file_name>.adoc[leveloffset=+1]
 
 // Assembly for RPM-based Ansible Automation Platform
 include::platform/assembly-update-rpm.adoc[leveloffset=+1]
