AAP-30340: Incorporated peer feedback

--- a/lightspeed/modules/proc_install-code-bot.adoc
+++ b/lightspeed/modules/proc_install-code-bot.adoc
@@ -32,7 +32,7 @@ On successful authorization, you are logged in to {AnsibleCodeBot} dashboard. Th
 
 == Post-installation tasks
 
-After the {AnsibleCodeBot} is installed, it automatically scans the selected repositories that are in Jinja format. Once the scanning is complete, the code bot generates an initial PR for each repository; the initial PR also contains the scan schedule configured to run weekly.
+After the {AnsibleCodeBot} is installed, it automatically scans the selected repositories that are in Jinja format. When the scanning is complete, the code bot generates an initial PR for each repository; the initial PR also contains the scan schedule configured to run weekly.
 
 .Procedure
 
@@ -55,7 +55,7 @@ image::code-bot-initial-pr.png[{AnsibleCodeBot} settings]
 
 == Uninstalling the {AnsibleCodeBot}
 
-If you no longer want to use the {AnsibleCodeBot}, you can uninstall it from GitHub. Once uninstalled, you can still access the {AnsibleCodeBot} dashboard but you cannot see the repositories on the dashboard or scan your repositories.
+If you no longer want to use the {AnsibleCodeBot}, you can uninstall it from GitHub. After the code bot is uninstalled, you can still access the {AnsibleCodeBot} dashboard but you cannot see the repositories on the dashboard or scan your repositories.
 
 .Procedure
 . Log in to GitHub by using the account associated with your organization.
