--- a/lightspeed/modules/proc_configure-repo-scan.adoc
+++ b/lightspeed/modules/proc_configure-repo-scan.adoc
@@ -4,12 +4,14 @@
 
 = Configuring the {AnsibleCodeBot} to scan your repository at regular intervals
 
-You can schedule the {AnsibleCodeBot} to scan your repositories at daily, weekly, or monthly intervals. To specify a scan schedule for your repository, create a configuration file `ansible-code-bot.yml` within your repository and specify your scan schedule in the `.yml` file. 
+After installing the {AnsibleCodeBot}, it automatically scans the selected repositories that are in Jinja format. Once the scanning is complete, the code bot generates an initial PR for each repository; the initial PR also contains the scan schedule configured to run weekly. You must review the initial PR for the suggested changes and merge the PR. Once the initial PR is merged, the scan schedule is triggered, and the subsequent repository scans are performed weekly. If required, you can change the scan schedule to a daily or monthly cadence. 
+
+NOTE: If you do not merge the initial PR, the weekly scan schedule is not triggered and the {AnsibleCodeBot} dashboard displays the repositories without any associated scan history.  In such a scenario, you must manually create a configuration file `ansible-code-bot.yml` and specify your scan schedule within the file.
 
 You can specify one of following interval cadence to scan your Git repositories:
 
 * Daily: Runs every day from Monday to Sunday.
-* Weekly: Runs once a week. By default, this is on Monday. 
+* Weekly: Runs once a week on Monday. Per the initial configuration PR, the {AnsibleCodeBot} is set to scan your repositories weekly until you change the schedule to daily or monthly. 
 * Monthly: Runs on the first day of the month, once each month.
 
 For each interval cadence, {AnsibleCodeBot} starts scanning your Git repositories at 9 AM UTC.
@@ -17,12 +19,13 @@ For each interval cadence, {AnsibleCodeBot} starts scanning your Git repositorie
 .Procedure
 
 . In GitHub, navigate to the repository that you want to scan.
-. Create a `.yml` configuration file named `ansible-code-bot.yml` in your repository `.github` folder. For example, `.github/ansible-code-bot.yml`.
-. In the configuration file, specify the `interval` parameter. You can specify the `interval` parameter as *daily*, *weekly*, or *monthly*. For example:
+. Create a `.yml` configuration file named `ansible-code-bot.yml` in your repository `.github` folder. +
+For example, `.github/ansible-code-bot.yml`.
+. In the configuration file, specify the scan schedule in the `interval` parameter. You can specify the `interval` parameter as `*daily*`, `*weekly*`, or `*monthly*`. For example:
 +
 ----
 schedule:
-  interval: "<daily | weekly | monthly>"
+  interval: daily
 ----
 +
 . Commit your changes. 
