add 2 modules aap-31734

--- a/downstream/titles/updating-aap/master.adoc
+++ b/downstream/titles/updating-aap/master.adoc
@@ -25,4 +25,6 @@ include::platform/assembly-update-rpm.adoc[leveloffset=+1]
 
 == {PlatformNameShort} on {OCPShort}
 
+include::platform/platform/proc-update-aap-rpm.adoc[leveloffset=+2]
+include::platform/platform/proc-update-aap-container.adoc[leveloffset=+2]
 include::platform/platform/proc-update-aap-on-ocp.adoc[leveloffset=+2]
